src/objects/Alliance_Order_Export_Mapping__c.object
<CustomObject>
    <description>Custom object defines the rules to configure &quot;IMPACT&quot;/ &quot;SPS&quot; &amp; &quot;PCI/SI&quot; products for Alliance, QTC &amp; P20 external systems.</description>
    <fields>
        <fullName>Arcadia_Options_Product_Code__c</fullName>
        <description>Products available in sCRM and are direct subordinate of Arcadia products.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Arcadia Options Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arcadia_Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Arcadia Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Bundle_Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Main Bundle Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCI_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PCI Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code_For_Alliance_Export_File__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Code For Alliance Export File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Alliance Order Export Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PCI_Category__c</columns>
        <columns>Main_Bundle_Product_Code__c</columns>
        <columns>Arcadia_Product_Code__c</columns>
        <columns>Arcadia_Options_Product_Code__c</columns>
        <columns>Product_Code_For_Alliance_Export_File__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Rule-{00000}</displayFormat>
        <label>Alliance Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alliance Order Export Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>